Added amd Modified

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,8 @@
-; sonar.projectKey=Swati
-; sonar.projectName=Swati
-; sonar.projectVersion=1.0-SNAPSHOT
-; sonar.sourceEncoding=UTF-8
-; sonar.sources=src
-; sonar.java.binaries=target/classes
-; sonar.language=java
 
 
-sonar.projectKey=demo_1
-sonar.projectName=demo_1
+sonar.projectKey=PMSeries
+sonar.projectName=PMSeries
 sonar.projectVersion=1.0
-sonar.sources=src
+sonar.sources=src/main
 sonar.sourceEncoding=UTF-8
 sonar.java.source=1.8
